<resources>
    <string name="app_name">Family Hub</string>

    <!-- MainActivity -->
    <string name="photos_button">Photos</string>
    <string name="messages_button">Messages</string>
    <string name="settings_button">Settings</string>
    <string name="reset_launcher_button">Reset launcher</string>
    <string name="dialog_text_change_home_default">Your default Home screen is \"%s\".\n\nTap OK, then \"Clear Defaults\" to choose a new default.</string>
    <string name="dialog_text_change_home_lollipop_above">Your default Home screen is \"%1$s\".\n\nTap OK, then \"Home app\" to choose a new default. Then re-open %2$s.</string>
    <string name="dialog_text_no_sim_card">Device not supported - SIM card required.</string>
    <string name="dev_mode_header_string_format">DEV MODE  _ %s _  DEV MODE</string>

    <!-- Messages activities -->
    <string name="show_earlier_message_button">Older</string>
    <string name="show_later_message_button">Newer</string>
    <string name="back_to_main_button">Home</string>
    <string name="back_to_messages_button">Back to messages</string>
    <string name="message_unread_text">NEW MESSAGE</string>
    <string name="reply_button_text_replied">✔ Replied️</string>
    <string name="empty_inbox_message">You have no messages from your contacts</string>
    <string name="choose_reply_text">Choose reply</string>
    <string name="reply_button_text_default">Reply</string>

    <!-- ReplyActivity -->
    <string name="confirm_sms_sent">Your reply has been sent</string>

    <!-- ComfirmMessageSentActivity -->
    <string name="countdown_timer_text">Returning to inbox in %d seconds</string>

    <!-- SlideshowActivity -->
    <string name="no_photos_available_text">No photos available</string>
    <string name="loading_text">Loading photos...</string>

    <!-- SettingsActivity -->
    <string name="sp_category_title_application">Application</string>
    <string name="sp_title_keep_screen_on">Keep screen on</string>
    <string name="sp_summary_keep_screen_on">Only when device is plugged in</string>
    <string name="sp_title_dev_mode_enabled">Dev mode</string>
    <string name="sp_summary_dev_mode_enabled">Stop requiring app has SMS and launcher status</string>

    <string name="sp_category_title_vocalisation">Speech</string>
    <string name="sp_title_vocalisation_enabled">Speak messages selected</string>
    <string name="sp_summary_vocalisation_enabled">Long-press on message to hear it read aloud</string>
    <string name="sp_title_choose_speech_rate">Speech rate</string>
    <string name="choose_speech_rate_dialog_title">Choose speech rate</string>
    <string name="sp_summary_choose_speech_rate">Change the speed at which words are spoken</string>

    <string name="sp_category_title_messages">Messages</string>
    <string name="sp_title_enable_replies">Allow replies</string>
    <string name="sp_title_hide_msg_when_replied">Hide replied-to messages</string>
    <string name="sp_screen_title_preset_replies">Customise preset replies</string>
    <string name="title_reply_A">Reply #1</string>
    <string name="title_reply_B">Reply #2</string>
    <string name="title_reply_C">Reply #3</string>
    <string name="default_text_reply_A">Preset 1</string>
    <string name="default_text_reply_B">Preset 2</string>
    <string name="default_text_reply_C">Preset 3</string>

    <string name="sp_category_title_photos">Photos</string>
    <string name="sp_title_auto_play_slides">Auto-play slides</string>
    <string name="sp_summary_auto_play_slides">Slides begin automatically from home screen</string>

    <string name="sp_title_transition_frequency">Display rate (secs)</string>
    <string name="sp_summary_transition_frequency">Time until next slide is shown</string>

    <string name="sp_title_delay_initiate_auto_play">Delay before auto-play (secs)</string>
    <string name="sp_summary_delay_initiate_auto_play">Time until slides begin auto-playing</string>

    <!-- Shared prefs keys -->
    <string name="sp_name_enable_fullscreen">pref_fullscreen_mode_enabled</string>
    <string name="sp_name_vocalisation_enabled">pref_vocalisation_enabled</string>
    <string name="sp_name_pref_choose_speech_rate">pref_choose_speech_rate</string>
    <string name="sp_name_pref_enable_photos">pref_enable_photos</string>
    <string name="sp_name_pref_max_messages_from_contact">pref_max_messages_from_contact</string>
    <string name="sp_name_enable_replies">pref_enable_replies</string>
    <string name="sp_name_pref_hide_msg_when_replied">pref_hide_msg_when_replied</string>
    <string name="sp_name_reply_A">pref_reply_A</string>
    <string name="sp_name_reply_B">pref_reply_B</string>
    <string name="sp_name_reply_C">pref_reply_C</string>
    <string name="sp_name_keep_screen_on">pref_keep_screen_on</string>
    <string name="sp_name_transition_frequency">pref_transition_frequency</string>

    <string name="pref_title_enable_photos">Enable slideshow</string>
    <string name="pref_summary_enable_photos">Enable access to photo slideshow</string>
    <string name="pref_title_photo_order_random">Photos in random order</string>
    <string name="pref_summary_photo_order_random">Show photos in random order</string>
</resources>
