<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/sp_category_title_application">
        <CheckBoxPreference
            android:key="@string/sp_name_keep_screen_on"
            android:title="@string/sp_title_keep_screen_on"
            android:summary="@string/sp_summary_keep_screen_on"
            android:defaultValue="@bool/pref_default_keep_screen_on_default" />
        <!--<CheckBoxPreference-->
            <!--android:key="@string/sp_name_enable_fullscreen"-->
            <!--android:title="@string/sp_title_enable_fullscreen"-->
            <!--android:defaultValue="true" />-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sp_category_title_messages"
        android:persistent="false">
        <ListPreference
            android:key="@string/sp_name_pref_max_messages_from_contact"
            android:enabled="false"
            android:title="Max messages to show per contact"
            android:dialogTitle="Maximum per contact"
            android:summary="Show this many messages per contact"
            android:entries="@array/max_messages_per_contact_options"
            android:entryValues="@array/max_messages_per_contact_options_values"
            android:defaultValue="@integer/pref_default_max_messages_per_contact_options"/>
        <CheckBoxPreference
            android:key="@string/sp_name_enable_replies"
            android:title="@string/sp_title_enable_replies"
            android:summary="Replies can be sent by SMS"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="@string/sp_name_pref_hide_msg_when_replied"
            android:dependency="@string/sp_name_enable_replies"
            android:title="@string/sp_title_hide_msg_when_replied"
            android:summary="Only show messages that have not been replied to"
            android:defaultValue="false"/>
        <PreferenceScreen
            android:title="@string/sp_screen_title_preset_replies"
            android:dependency="@string/sp_name_enable_replies"
            android:persistent="false">
            <EditTextPreference
                android:key="@string/sp_name_reply_A"
                android:title="@string/title_reply_A"
                android:defaultValue="@string/default_text_reply_A" />
            <EditTextPreference
                android:key="@string/sp_name_reply_B"
                android:title="@string/title_reply_B"
                android:defaultValue="@string/default_text_reply_B" />
            <EditTextPreference
                android:key="@string/sp_name_reply_C"
                android:title="@string/title_reply_C"
                android:defaultValue="@string/default_text_reply_C" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sp_category_title_vocalisation"
        android:persistent="false">
        <CheckBoxPreference
            android:key="@string/sp_name_vocalisation_enabled"
            android:title="@string/sp_title_vocalisation_enabled"
            android:defaultValue="@bool/pref_default_vocalisation_enabled"
            android:summary="@string/sp_summary_vocalisation_enabled"/>
        <ListPreference
            android:dependency="@string/sp_name_vocalisation_enabled"
            android:key="@string/sp_name_pref_choose_speech_rate"
            android:title="@string/sp_title_choose_speech_rate"
            android:dialogTitle="@string/choose_speech_rate_dialog_title"
            android:summary="@string/sp_summary_choose_speech_rate"
            android:entries="@array/speech_rate_options"
            android:entryValues="@array/speech_rate_options_values"
            android:defaultValue="@dimen/pref_default_speech_rate_options" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sp_category_title_photos"
        android:persistent="false"
        android:enabled="true">
        <CheckBoxPreference
            android:key="pref_name_enable_photos"
            android:title="@string/pref_title_enable_photos"
            android:defaultValue="@bool/pref_default_enable_photos"
            android:summary="@string/pref_summary_enable_photos"/>
        <CheckBoxPreference
            android:key="pref_photo_order_random"
            android:dependency="pref_name_enable_photos"
            android:title="@string/pref_title_photo_order_random"
            android:defaultValue="@bool/pref_default_photo_order_random"
            android:summary="@string/pref_summary_photo_order_random"/>
        <EditTextPreference
            android:key="@string/sp_name_transition_frequency"
            android:dependency="pref_name_enable_photos"
            android:title="@string/sp_title_transition_frequency"
            android:summary="@string/sp_summary_transition_frequency"
            android:numeric="integer"
            android:defaultValue="@string/pref_default_transition_frequency_seconds" />
        <CheckBoxPreference
            android:key="pref_auto_play_slides"
            android:dependency="pref_name_enable_photos"
            android:title="@string/sp_title_auto_play_slides"
            android:defaultValue="@bool/pref_default_auto_play_slides"
            android:summary="@string/sp_summary_auto_play_slides"/>
        <EditTextPreference
            android:key="pref_delay_initiate_auto_play"
            android:dependency="pref_auto_play_slides"
            android:title="@string/sp_title_delay_initiate_auto_play"
            android:summary="@string/sp_summary_delay_initiate_auto_play"
            android:numeric="integer"
            android:defaultValue="@string/pref_default_delay_initiate_auto_play_seconds" />

        <!--<PreferenceScreen-->
            <!--android:title="Manage photo sources">-->
            <!--<CheckBoxPreference-->
                <!--android:key="@string/sp_name_pref_enable_photos"-->
                <!--android:defaultValue="false"-->
                <!--android:title="Enable photos view" />-->
        <!--</PreferenceScreen>-->
    </PreferenceCategory>
</PreferenceScreen>