<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/inbox_layout"
    tools:context=".messages.InboxActivity">
    <Button
        android:id="@+id/back_button"
        style="@style/LargeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_button"
        android:onClick="showPreviousActivity"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/scroller_message_view">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/unread_state"
                android:textSize="@dimen/metadata_font_size"
                android:background="@drawable/unread_state_background"
                android:text="@string/message_unread_text"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                android:textStyle="bold"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/message_sender_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/default_text_size"
                    android:textAlignment="center"
                    android:padding="@dimen/default_text_padding"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/message_datetime_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:paddingLeft="@dimen/default_text_padding"
                android:textAlignment="center"
                android:paddingRight="@dimen/default_text_padding"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/default_view_padding"
                android:background="@color/color_divider"
                android:id="@+id/divider_metadata"/>
            <TextView
                android:id="@+id/message_body_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:padding="@dimen/default_view_padding" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/reply_button"
        style="@style/LargeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/reply_button_text_default"
        android:onClick="showReplyActivity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">
        <Button
            android:id="@+id/select_earlier_message_button"
            style="@style/LargeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/show_earlier_message_button"
            android:onClick="previewEarlierMessage"/>
        <Button
            android:id="@+id/select_later_message_button"
            style="@style/LargeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/show_later_message_button"
            android:onClick="previewLaterMessage"/>
    </LinearLayout>

</LinearLayout>